# PythonCICD

./: .gitignore  Dockerfile  Readme.md  common.yaml  compose.dev.yaml  compose.stag.yaml  compose.yaml  deploy.sh  pyproject.toml
.github/workflows/: python-app-cd-docker.yml  python-app-cd.yml  python-app-ci-cd-docker.yml  python-app-ci-cd.yml  python-app-ci.yml  python-app.yml
app/: main.py
app/tests/: test_main.py
