[tool.poetry]
name = "pythoncicd"
version = "0.1.0"
description = ""
authors = ["Rezwanul Islam <rezwanul7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
